Suite des corrections sur le bug d'affichage pour la version mobile

--- a/assets/animal.scss
+++ b/assets/animal.scss
@@ -37,7 +37,7 @@
                     align-items: center;
                     flex-direction: column;
                     transition: all 0.5s;
-                    transform: translateY(10%);
+                    transform: translateY(0%);
                     opacity: 0;
 
                     h5,h6{
